--- a/templates/sellWork/templates.html
+++ b/templates/sellWork/templates.html
@@ -133,6 +133,8 @@
             <div class="my-3 mt-5">
               <div class="d-flex text-white mb-3">
                 <h1 class="h3"><span class="hilate-text">/</span>Templates</h1>
+                <div id="templates-hr-line"></div>
+
               </div>
               <div class="container my-md-4 my-sm-2">
                 <div class="row g-4"> 
