Added new pages policy & terms

--- a/templates/sellWork/templates.html
+++ b/templates/sellWork/templates.html
@@ -615,8 +615,8 @@
             </p>
             <p class="mb-0 passage-text">
               © {% now "Y" %} Vamsi Krishna. All rights reserved.
-              <a href="#" class="text-decoration-none passage-text ms-2">Privacy Policy</a> |
-              <a href="#" class="text-decoration-none passage-text">Terms of Service</a>
+              <a href="{% url 'privacy_policy' %}" class="text-decoration-none passage-text ms-2">Privacy Policy</a> |
+              <a href="{% url 'terms_of_service' %}" class="text-decoration-none passage-text">Terms of Service</a>
             </p>
           </div>
         </div>
