Updated policy & service

--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -91,6 +91,7 @@
         <p>If you have any questions about this Privacy Policy, please contact us at:</p>
         <ul>
           <li>Email: contact@vamsikrishna.site</li>
+          <li>Phone: +91 6302682957</li>
           <li>Website: <a href="{% url 'home' %}" class="text-decoration-none hilate-text">vamsikrishna.site</a></li>
         </ul>
       </div>
