--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -95,8 +95,13 @@
         <p>If you have any questions about these Terms of Service, please contact us at:</p>
         <ul>
           <li>Email: contact@vamsikrishna.site</li>
+          <li>Phone: +91 6302682957</li>
           <li>Website: <a href="{% url 'home' %}" class="text-decoration-none hilate-text">vamsikrishna.site</a></li>
         </ul>
+      </div>
+      <div class="terms-section">
+        <h2>11. This Website is owned by</h2>
+        <p>Nagidi Vamsi Krishna</p>
       </div>
     </div>
 
