--- a/templates/index.html
+++ b/templates/index.html
@@ -231,7 +231,7 @@
                     <p class="passage-text">
                         Passionate about full-stack development, I specialize in creating seamless user experiences and dynamic web applications. Open to work and job opportunities!
                     </p>
-                    <a href="#contact" class="custom-buttons btn btn-outline-primary border-0">Contact me!!</a>
+                    <a href="#contact" class="custom-buttons btn btn-outline-primary border-0">Contact me <i class="bi bi-send-fill ms-2"></i></a>
                 </div>
 
                 {% comment %} loading animation {% endcomment %}
@@ -249,7 +249,7 @@
                         <span class="bg-primary text-primary">. </span>&#8203; 
                         <span class="d-inline-block">Currently working on</span>
                         <strong class="text-white d-block d-md-inline-block mt-1 mt-md-0">
-                            <a target="_blank" class="text-white text-decoration-none link-opacity-50-hover" href="https://github.com/vamsikrishna7-github/ranjith-fitclub.git">Ranjith FitClub</a>
+                            <a target="_blank" class="text-white text-decoration-none link-opacity-50-hover" href="{{current_project.github_link}}">{{ current_project.title }}</a>
                         </strong>
                     </div>
                 </div>
@@ -280,6 +280,34 @@
           <div class="container my-md-4 my-sm-2">
             <div class="row g-4"> 
               
+              <!-- Project Card 1 -->
+              <div class="col-12 col-md-6 col-lg-4"> 
+                <div class="card h-auto d-flex flex-column">
+                  <img src="{% static 'img/projects/zyukthi.webp' %}" class="card-img-top" alt="Project Image">
+                  <div class="card-header passage-text">Next.js, Django REST Framework (DRF), Django Templates (Admin)</div>
+                  <div class="card-body d-flex flex-column flex-grow-1">
+                    <div class="card-title">Zyukthi Hiring Platform</div>
+                    <p class="card-text passage-text flex-grow-1">
+                      A freelance multi-role hiring platform with separate logins for Employers, Candidates, and Consultancies, along with an admin dashboard to verify users and manage job postings.     
+                    </p>
+                    <div>
+                      <a target="_blank" href="https://www.figma.com/design/uA3fNFXXqOClvBCNFMOh96/Untitled?node-id=0-1&t=iObeeZq0WUTUr5pm-1" class="btn btn-outline-primary rounded-0 custom-buttons mb-2" type="button">
+                        <img width="20" height="20" src="https://img.icons8.com/ios-filled/500/FFFFFF/figma--v1.png" alt="GitHub Icon"/> Design
+                      </a>
+                      <a target="_blank" href="https://github.com/vamsikrishna7-github/hirelink" class="btn btn-outline-primary rounded-0 custom-buttons mb-2" type="button">
+                        <i class="bi bi-github me-2"></i>Frontend
+                      </a>
+                      <a target="_blank" href="https://github.com/vamsikrishna7-github/hirelink-api" class="btn btn-outline-primary rounded-0 custom-buttons" type="button">
+                        <i class="bi bi-github me-2"></i>Backend
+                      </a>
+                      <a target="_blank" href="http://zyukthi.vercel.app/" class="btn btn-outline-primary rounded-0 custom-buttons" type="button">
+                        <img width="20" height="20" src="https://img.icons8.com/material-rounded/192/FFFFFF/youtube-live.png" alt="Live Icon"/> Live
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <!-- Project Card 1 -->
               <div class="col-12 col-md-6 col-lg-4"> 
                 <div class="card h-auto d-flex flex-column">
@@ -325,7 +353,7 @@
               </div>
 
               <!-- Project Card 3 -->
-              <div class="col-12 col-md-6 col-lg-4"> 
+              <div class="show-hide-projects col-12 col-md-6 col-lg-4 d-none"> 
                 <div class="card h-auto d-flex flex-column">
                   <img src="{% static 'img/projects/1.webp' %}" class="card-img-top" alt="Project Image">
                   <div class="card-header passage-text">HTML CSS JavaScript Bootstrap Python Django SQLite</div>
@@ -896,7 +924,7 @@
                 </div>              
                 <div class="row p-2">
                     <div class="col">
-                        <button id="submit" class="btn btn-outline-primary rounded-0 custom-buttons" type="submit">Send</button>
+                        <button id="submit" class="btn btn-outline-primary rounded-0 custom-buttons" type="submit">Send<i class="bi bi-send-fill ms-2"></i></button>
                     </div>
                 </div>
             </form>
