--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vamsi Krishna - Admin Panel</title>
-    <link rel="icon" type="image/png" href="{% static 'img/urlicon.webp' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-96x96.png' %}" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="{% static 'img/favicon/favicon.svg' %}" />
+    <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}" />
+    <meta name="apple-mobile-web-app-title" content="vamsikrishna" />
+    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/admin_pannel.css' %}">
