--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -9,7 +9,12 @@
     <meta name="keywords" content="terms of service, website terms, service agreement, legal terms">
     <meta name="author" content="Vamsi Krishna">
     
-    <link rel="icon" type="image/png" href="{% static 'img/urlicon.webp' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-96x96.png' %}" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="{% static 'img/favicon/favicon.svg' %}" />
+    <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}" />
+    <meta name="apple-mobile-web-app-title" content="vamsikrishna" />
+    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
