--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
         <div class="container-fluid">
             <a class="navbar-brand text-white">
                 <i class="bi bi-person-circle text-primary me-2"></i>
-                Welcome <strong class="text-primary">{{ user.username }}</strong>
+                Welcome <strong class="text-primary">{{ user.username|truncatechars:10 }}</strong>
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
                 <i class="bi bi-list fs-2 text-white"></i>
