--- a/templates/index.html
+++ b/templates/index.html
@@ -286,7 +286,7 @@
             <div class="row g-4"> 
               
               <!-- Project Card 1 -->
-              <div class="col-12 col-md-6 col-lg-4 d-none"> 
+              <div class="col-12 col-md-6 col-lg-4"> 
                 <div class="card h-auto d-flex flex-column">
                   <img src="{% static 'img/projects/zyukthi.webp' %}" class="card-img-top" alt="Project Image">
                   <div class="card-header passage-text">Next.js, Django REST Framework (DRF), Django Templates (Admin)</div>
@@ -358,7 +358,7 @@
               </div>
 
               <!-- Project Card 3 -->
-              <div class=" col-12 col-md-6 col-lg-4"> 
+              <div class="show-hide-projects col-12 col-md-6 col-lg-4 d-none"> 
                 <div class="card h-auto d-flex flex-column">
                   <img src="{% static 'img/projects/1.webp' %}" class="card-img-top" alt="Project Image">
                   <div class="card-header passage-text">HTML CSS JavaScript Bootstrap Python Django SQLite</div>
